Bug tracker at http://code.google.com/p/psutil/issues

0.6.2 - XXXX-XX-XX
------------------

NEW FEATURES

 * #246: psutil.error module is deprecated and scheduled for removal.
 * #328: [Windows] process IO nice/priority support.
 * #359: psutil.get_boot_time()
 * #361: [Linux] psutil.cpu_times() now includes new 'steal', 'guest' and
         'guest_nice' fields available on recent Linux kernels.
         Also, psutil.cpu_percent() is more accurate.
 * #362: cpu_times_percent() (per-CPU-time utilization as a percentage)

BUG FIXES

 * #234: [Windows] disk_io_counters() fails to list certain disks.
 * #264: [Windows] use of psutil.disk_partitions() may cause a message box to
         appear.
 * #313: [Linux] psutil.virtual_memory() and psutil.swap_memory() can crash on
         certain exotic Linux flavors having an incomplete /proc interface.
         If that's the case we now set the unretrievable stats to 0 and raise a
         RuntimeWarning.
 * #315: [OSX] fix some compilation warnings.
 * #317: [Windows] cannot set process CPU affinity above 31 cores.
 * #319: [Linux] process get_memory_maps() raises KeyError 'Anonymous' on Debian
         squeeze.
 * #323: [OSX] disk_io_counters()'s read_time and write_time parameters were
         reporting microseconds not milliseconds.  (patch by Gregory Szorc)
 * #331: Process cmdline is no longer cached after first acces as it may change.
 * #333: [OSX] Leak of Mach ports on OS X (patch by rsesek@google.com)
 * #337: [Linux] process methods not working because of a poor /proc
         implementation will raise NotImplementedError rather than RuntimeError
         and Process.as_dict() will not blow up.  (patch by Curtin1060)
 * #339: [FreeBSD] get_pid_list() can allocate all the memory on system.
 * #341: [Linux] psutil might crash on import due to error in retrieving system
         terminals map.
 * #344: [FreeBSD] swap_memory() might return incorrect results due to