@@ -6,6 +6,8 @@ Bug tracker at http://code.google.com/p/psutil/issues
 NEW FEATURES
 
  * #246: psutil.error module is deprecated and scheduled for removal.
+ * #321: [UNIX] Process.ppid property is no longer cached as the kernel may set
+         the ppid to 1 in case of a zombie process.
  * #328: [Windows] process IO nice/priority support.
  * #359: psutil.get_boot_time()
  * #361: [Linux] psutil.cpu_times() now includes new 'steal', 'guest' and
@@ -47,6 +49,7 @@ API CHANGES
    will raise NotImplementedError instead of RuntimeError.
  * Process.cmdline property is no longer cached after first access.
  * psutil.error module is deprecated and scheduled for removal.
+ * Process.ppid property is no longer cached
 
 
 0.6.1 - 2012-08-16
